k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: php-sample
  name: php-sample
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: php-sample
    weight: 100
